<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ClientePessoaJuridicaActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtClientePessoaJuridica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/txtClientePessoaJuridica"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCNPJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:text="@string/txtCNPJ"
        android:textColor="@color/verde"
        android:textStyle="bold"
        android:layout_marginLeft="16sp" />

    <EditText
        android:id="@+id/editCNPJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintCNPJ"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtRazaoSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:text="@string/txtRazaoSocial"
        android:textColor="@color/verde"
        android:textStyle="bold"
        android:layout_marginLeft="16sp" />

    <EditText
        android:id="@+id/editRazaoSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtHintRazaoSocial"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtDataAberturaPJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:text="@string/txtDataAberturaPJ"
        android:textColor="@color/verde"
        android:textStyle="bold"
        android:layout_marginLeft="16sp" />

    <EditText
        android:id="@+id/editDataAberturaPJ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Digite a data de abertura..."
        android:inputType="date" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp">

    <CheckBox
        android:id="@+id/chSimplesNacional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="simplesNacional"
        android:text="@string/txtSimplesNacional"
        android:textStyle="bold"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/chMEI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="mei"
        android:text="@string/txtMEI"
        android:textStyle="bold"
        android:layout_marginLeft="16dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSalvarContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnSalvarContinuar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="VOLTAR" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>